--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@
   padding: 5px;
   font-size: 1.2em;
   text-align: center;
-  margin: 5px;
   font-family: 'Just Another Hand';
   border: 1px solid purple;
 }
@@ -44,6 +43,7 @@
   border-style: none;
   width: 100px;
   display: block;
+  background-color: grey;
 }
 .side-btns:hover {
   color: white;
@@ -72,4 +72,13 @@
 .running {
   background-color: #921616;
   color: white;
+}
+
+.return {
+  background-color: blueviolet;
+  color: white;
+}
+
+.noreturn{
+  background-color: gray;
 }
