--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 *:focus {
   outline:0;
 }
-
+/*Title of Page*/
 #title {
   color: purple;
   margin: 10px;
@@ -12,13 +12,14 @@
   display: flex;
   justify-content: center;
 }
-
+/*Horizontal Center of Main Content*/
 #main-content {
   display: flex;
   justify-content: center;
 }
 
-#map {
+/*Add border to elements*/
+#image-holder {
   border: 2px solid black;
 }
 
@@ -28,6 +29,7 @@
   border: 2px solid black;
 }
 
+/*Distance counter formatting*/
 #data-stream {
   padding: 5px;
   font-size: 1.2em;
@@ -36,6 +38,7 @@
   border: 1px solid purple;
 }
 
+/*Side buttons formatting*/
 .side-btns {
   color: black;
   background-color: gray;
@@ -50,6 +53,7 @@
   color: white;
 }
 
+/*Make title look like a title and not a button*/
 #title-sideBar {
   background: none;
 }
@@ -65,6 +69,7 @@
   display: block;
 }
 
+/*Play button play or stop*/
 .stopped {
   background-color: #2B712B;
   color: white;
@@ -75,6 +80,7 @@
   color: white;
 }
 
+/*Return button on or off*/
 .return {
   background-color: blueviolet;
   color: white;
@@ -84,6 +90,7 @@
   background-color: gray;
 }
 
+/*Direction Box*/
 #directionTitle {
   padding: 5px;
   font-size: 2em;
@@ -100,4 +107,13 @@
   margin: 5px;
   padding: 10px;
   border: 2px solid black;
+}
+
+/*Switch between google map and google street view*/
+.google-active {
+  display: inherit;
+
+}
+.google-not-active {
+  display: none;
 }
