--- a/style.css
+++ b/style.css
@@ -87,12 +87,12 @@
   font-size: 2em;
   font-family: 'Just Another Hand', cursive;
   text-align: center;
-  padding: 0px;
   margin: 0 auto;
   margin-top: 5px;
   margin-bottom: 5px;
   border-style: none;
   width: 100px;
+  display: block;
   background: none;
 }
 
