--- a/style.css
+++ b/style.css
@@ -29,18 +29,18 @@
 
 #image-holder {
   border: 2px solid black;
-  width: 700px;
-  height: 500px;
+  width: 50%;
+  height: fill;
 }
 
 #map {
-  width: 700px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
 }
 
 #streetView {
-  width: 700px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
 }
 
 #side-bar {
@@ -56,7 +56,7 @@
   font-size: 1.2em;
   text-align: center;
   font-family: 'Just Another Hand';
-  border: 1px solid purple;
+  border: 1px solid blue;
 }
 
 /*Side buttons formatting*/
@@ -173,6 +173,10 @@
 
 .ctrlBtns {
   width: 40px;
+}
+
+.controls-not-active {
+  visibility: hidden;
 }
 
 /*Ideas Header Structure*/
