--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@
 
 /*Ideas Header Structure*/
 #ideas-container {
+  width: 300px;
   margin: 5px;
   padding: 10px;
   border: 2px solid black;
@@ -213,4 +214,20 @@
   border-style: none;
   margin-left: 5px;
   margin-right: 5px;
+}
+
+#ideas-go-btn:hover {
+  color: white;
+}
+
+.result-display {
+  background-color: #A5CDEF;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 5px;
+  border: 1px solid gray;
+  font-family: 'Just Another Hand';
+  font-size: 2em;
+  text-align: center;
+  width: 280px;
 }
